Fixed h1 position and size on each page. Resized and positioned menu portrait on mobile view

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -99,21 +99,21 @@
     }
 
 
-    &#about h1 {
+    #about h1 {
       font-size: 5rem;
       line-height: 1;
       margin-bottom: 3rem;
       margin-top: 2rem;
     }
 
-    &#work h1 {
+    #work h1 {
       font-size: 4rem;
       line-height: 1;
       margin-bottom: 3rem;
       margin-top: 2rem;
     }
 
-    &#contact h1 {
+    #contact h1 {
       font-size: 5rem;
       line-height: 1;
       margin-bottom: 3rem;
